flatpickr setup and tabs without toggle funcionality

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,9 +2,13 @@
 @import "config/colors";
 @import "config/utilities/index";
 
-// Your CSS partials
+// CSS partials
 @import "components/index";
 @import "pages/index";
+
+@import "flatpickr/dist/flatpickr";
+@import "flatpickr/dist/themes/airbnb";
+
 
 body {
 	margin: 0;
