--- a/app/assets/stylesheets/config/utilities/_spacing.scss
+++ b/app/assets/stylesheets/config/utilities/_spacing.scss
@@ -23,12 +23,24 @@
 	margin-bottom: 8px;
 }
 
+.ml-2 {
+  margin-left: 8px;
+}
+
+.mr-2 {
+  margin-right: 8px;
+}
+
 .mt-2 {
   margin-top: 8px;
 }
 
 .my-2 {
   @extend .mt-2 ,.mb-2;
+}
+
+.mx-2 {
+  @extend .mr-2, .ml-2;
 }
 
 .mb-1 {
