--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,6 +9,7 @@ $black: #2f2f3e;
 $light-black: #6c7b8a;
 $blue: #828ff4;
 $blue-2: #4c5fef;
+$blue-3: #4888ff;
 $blueish-gray: #f4f6f9;
 
 $dark-blue-gradient: linear-gradient(315deg, #4048ef 0%, #5a7bef 100%);
