--- a/app/assets/stylesheets/config/utilities/_display.scss
+++ b/app/assets/stylesheets/config/utilities/_display.scss
@@ -90,6 +90,22 @@
 	border-radius: 50%;
 }
 
+.rounded-top-left {
+	border-top-left-radius: 8px;
+}
+
+.rounded-bottom-left {
+	border-bottom-left-radius: 8px;
+}
+
+.rounded-top-right {
+	border-top-right-radius: 8px;
+}
+
+.rounded-bottom-right {
+	border-bottom-right-radius: 8px;
+}
+
 .rounded-square {
 	@extend .rounded;
 	border-bottom-left-radius: 100%16px;
