added tabs for duration or specific time and flatpickr implementation

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -4,6 +4,8 @@ input[type="submit"] {
 	@extend .no-decoration;
 	border: none;
 	background: transparent;
+  -webkit-tap-highlight-color: transparent;
+
 
 	&.btn {
 		display: block;
