--- a/app/assets/stylesheets/components/profile_tabs.scss
+++ b/app/assets/stylesheets/components/profile_tabs.scss
@@ -6,10 +6,10 @@
 
   .tab {
     @extend .mx-1, .py-3, .flex-grow-1, .justify-content-center, .h-100, .flex, .items-center;
+    transition: ease .5s;
 
 
     &.active {
-      // transition: ease 1s;
       background-color: white;
       border-radius: 16px;
       box-shadow: 0px 6px 10px rgba(50, 51, 94, 0.15);
