--- a/app/assets/stylesheets/config/utilities/_display.scss
+++ b/app/assets/stylesheets/config/utilities/_display.scss
@@ -6,10 +6,6 @@
 	display: block;
 }
 
-.none {
-	display: none;
-}
-
 .flex {
 	display: flex;
 
@@ -20,6 +16,10 @@
 	&.flex-row-reverse {
 		flex-direction: row-reverse;
 	}
+}
+
+.none {
+	display: none;
 }
 
 .self-centered {
@@ -124,4 +124,13 @@
 
 .nowrap {
   white-space: nowrap;
+}
+
+.noSelect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
