--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -114,6 +114,7 @@
 						background: $blue-3;
 
 						.event-details {
+							height: 100%;
 							color: white;
 							font-size: 12px;
 							overflow-x: overlay;
