--- a/app/assets/stylesheets/config/utilities/_display.scss
+++ b/app/assets/stylesheets/config/utilities/_display.scss
@@ -24,6 +24,10 @@
 	&.flex-row-reverse {
 		flex-direction: row-reverse;
 	}
+
+	&.flex-column-reverse {
+		flex-direction: column-reverse;
+	}
 }
 
 .none {
@@ -31,7 +35,7 @@
 }
 
 .self-centered {
-  align-self: center;
+	align-self: center;
 }
 
 .flex-shrink-2 {
@@ -147,14 +151,14 @@
 }
 
 .nowrap {
-  white-space: nowrap;
+	white-space: nowrap;
 }
 
 .noSelect {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
