fix color of job pill status

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,6 +11,7 @@ $blue: #828ff4;
 $blue-2: #4c5fef;
 $blue-3: #4888ff;
 $blueish-gray: #f4f6f9;
+$flat-brown-5: #cbbdbd;
 
 $dark-blue-gradient: linear-gradient(315deg, #4048ef 0%, #5a7bef 100%);
 $light-blue-gradient: linear-gradient(
