quick small fixes

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,6 +1,12 @@
 #dashboardPage {
 	.jobs {
 		.active-jobs {
+			.job-card {
+				.skill-pill {
+					@extend .mr-0;
+				}
+			}
+
 			.applicant-avatars {
 				@extend .flex, .justify-content-center;
 
