--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -21,11 +21,11 @@
     </div>
     <div class="booking-cards">
       <% if current_user.freelancer? %>
-        <% current_user.profile.bookings.includes(profile: [user: :avatar_attachment]).each do |booking| %>
+        <% current_user.profile.bookings.each do |booking| %>
           <%= render partial: "bookings/freelancer_card", locals: { booking: booking } %>
         <% end %>
       <% else %>
-        <% current_user.manager.bookings.includes(profile: [user: :avatar_attachment]).each do |booking| %>
+        <% current_user.manager.bookings.includes(profile: [user: { avatar_attachment: :blob }]).each do |booking| %>
           <%= render partial: "bookings/manager_card", locals: { booking: booking } %>
         <% end %>
       <% end %>
