--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -11,10 +11,10 @@
 
   <section class="switch flex justify-content-between p-3 my-3" style="background-color: #F9FBFE;">
     <%= link_to profiles_path(network: true), class: "flex items-center btn #{params[:network] ? 'btn-white' : 'btn-transparent'}" do %>
-      <%= image_tag "icons/person-check.svg", alt: "in network" %> My network
+      <%= image_tag "icons/person-check.svg", alt: "in network", class: "vertical-align-middle" %> My network
     <% end %>
     <%= link_to profiles_path, class: "flex items-center btn #{params[:network] ? 'btn-transparent' : 'btn-white'}" do %>
-      <%= image_tag "icons/people.svg", alt: "everyone" %> Everyone
+      <%= image_tag "icons/people-dark.svg", alt: "everyone", class: "vertical-align-middle" %> Everyone
     <% end %>
   </section>
 
