--- a/app/views/profiles/_general_profile.html.erb
+++ b/app/views/profiles/_general_profile.html.erb
@@ -1,4 +1,4 @@
-<div class="generalProfile">
+<div class="generalProfile w-100">
 
   <div class="profileBanner" style="background-image: url(<%= avatar_url(@profile) %>)"></div>
 
@@ -74,12 +74,12 @@
     <!-- Tabs -->
 
     <div class="profileTabs" id="tabs">
-      <%= link_to "About", profile_path(@profile, tab: 'about', anchor: 'skills'), class: "tab #{'active' if params[:tab] == 'about' || !params[:tab] }" %>
-      <%= link_to "Links", profile_path(@profile, tab: 'links', anchor: 'skills'), class: "tab #{'active' if params[:tab] == 'links' }" %>
-      <%= link_to "Notes (#{@notes.count})", profile_path(@profile, tab: 'notes', anchor: 'skills'), class: "tab #{'active' if params[:tab] == 'notes' }" %>
+      <%= link_to "About", profile_path(@profile, tab: 'about', anchor: 'skills'), id: "about-tab", class: "tab #{'active' if params[:tab] == 'about' || !params[:tab] }", remote: true %>
+      <%= link_to "Links", profile_path(@profile, tab: 'links', anchor: 'skills'), id: "link-tab", class: "tab #{'active' if params[:tab] == 'links' }", remote: true %>
+      <%= link_to "Notes (#{@notes.count})", profile_path(@profile, tab: 'notes', anchor: 'skills'), id: "note-tab", class: "tab #{'active' if params[:tab] == 'notes' }", remote: true %>
     </div>
 
-    <div class="p-3">
+    <div class="p-3" id="tab-content">
       <%= render "#{params[:tab] || 'about' }_content" %>
     </div>
 
