--- a/app/assets/stylesheets/pages/_job_show.scss
+++ b/app/assets/stylesheets/pages/_job_show.scss
@@ -40,9 +40,9 @@
 			@extend .pt-3;
 
 			& > p {
-				@extend .mb-1, .mt-0;
+				@extend .mb-2, .mt-0;
 
-				color: #3b3b4d;
+				color: $dark-gray;
 			}
 
 			.skills {
@@ -52,4 +52,24 @@
 			}
 		}
 	}
+
+  .company-logo {
+    @extend .mb-2, .rounded-square;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    box-shadow: 0px 3px 6px -2px rgba(50, 51, 9, .1);
+  }
+
+  .skill-pill {
+    font-size: 12px;
+  }
+
+  .navHeader {
+    p {
+      font-size: 18px;
+      &:first-of-type {
+        font-weight: 600;
+      }
+    }
+  }
 }
