styling, utilities, and colors

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,7 +11,17 @@ $blue: #828ff4;
 $blue-2: #4c5fef;
 $blue-3: #4888ff;
 $blueish-gray: #f4f6f9;
+
 $flat-brown-5: #cbbdbd;
+
+$flat-green-3: #1ed7a6;
+$flat-green-5: #d3f7ed;
+
+$flat-red-3: #ff464b;
+$flat-red-5: #ffdcdd;
+
+$flat-orange-3: #fed18a;
+$flat-orange-5: #fff0e2;
 
 $dark-blue-gradient: linear-gradient(315deg, #4048ef 0%, #5a7bef 100%);
 $light-blue-gradient: linear-gradient(
