--- a/app/assets/stylesheets/components/_action_button.scss
+++ b/app/assets/stylesheets/components/_action_button.scss
@@ -28,6 +28,14 @@
 			text-transform: uppercase;
 			border-bottom: 1px solid rgba(255, 255, 255, 0.05);
 			padding: 8px 0;
+      &:hover {
+        opacity: .8;
+      }
+      &:active {
+        opacity: .8;
+        background-color: rgba(20, 15, 38, 0.1);
+        border-radius: 16px;
+      }
 		}
 	}
 
