white background on focus

--- a/app/assets/stylesheets/components/_input.scss
+++ b/app/assets/stylesheets/components/_input.scss
@@ -6,7 +6,8 @@ select {
 	border-radius: $radius-md;
 	padding: 8px;
 	color: #121217;
-  &:focus {
-    outline: $blue auto 1px;
-  }
+	&:focus {
+		outline: $blue auto 1px;
+		background: white;
+	}
 }
