pls stop jumping

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -29,7 +29,7 @@
       <div class="flex justify-content-between items-center flex-shrink-2">
 
         <!-- Start time and end time OR duration input -->
-        <div class="bookingHours">
+        <div class="bookingHours w-100">
           <div class="bookingSpecific">
             <label class="block textGray nowrap">Hours per day</label>
             <div class="inputs flex items-center">
