--- a/app/views/profiles/_my_profile.html.erb
+++ b/app/views/profiles/_my_profile.html.erb
@@ -6,7 +6,7 @@
     <% else %>
       <%= image_tag "https://png.pngtree.com/png-clipart/20190520/original/pngtree-vector-users-icon-png-image_4144740.jpg", alt: "alttext", class: "profileAvatar rounded-circle", height: 64, width: 64 %>
     <% end %>
-    <div class="profileHeaderRight">
+    <div class="profileHeaderLeft">
       <h2><%= current_user.display_name %></h2>
       <p><%= current_user.email %></p>
     </div>
