--- a/app/assets/stylesheets/pages/_managers_new.scss
+++ b/app/assets/stylesheets/pages/_managers_new.scss
@@ -2,6 +2,12 @@
 	background: $blueish-gray;
 	height: 100%;
 
+	#photo-preview {
+		&.initial {
+			background: $dark-blue-gradient;
+		}
+	}
+
 	input[type="text"] {
 		@extend .py-3;
 
