skeleton for preview image

--- a/app/views/managers/new.html.erb
+++ b/app/views/managers/new.html.erb
@@ -1,8 +1,12 @@
+
 <div class="manager-new-page">
   <%= simple_form_for @manager, html: { class: "mx-3" } do |f| %>
     <div class="step-1">
       <h3 class="uppercase text-center mt-0 pt-3">Your profile</h3>
       <%= f.simple_fields_for :user_attributes do |u| %>
+        <div class="flex justify-content-center">
+          <%= image_tag "icons/camera.svg", alt: "preview of image", id: "photo-preview", class: "initial avatar avatar-circle", width: 300 %>
+        </div>
         <%= u.input :avatar, as: :file,
                     required: false,
                     label: "Display picture", label_html: { class: "uppercase textSm" },
