--- a/app/assets/stylesheets/pages/_job_show.scss
+++ b/app/assets/stylesheets/pages/_job_show.scss
@@ -58,6 +58,7 @@
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     box-shadow: 0px 3px 6px -2px rgba(50, 51, 9, .1);
+    object-fit: contain;
   }
 
   .skill-pill {
